[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sergey Dolin <sergey.dolin@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
